# ticket_to_ride

./: Cargo.toml  DESIGN.md
.tickets/: sync.toml  ttr-0001.md  ttr-0002.md  ttr-0003.md  ttr-0004.md  ttr-0005.md  ttr-0006.md  ttr-0007.md  ttr-0008.md  ttr-0009.md  ttr-0010.md  ttr-0011.md  ttr-0012.md  ttr-0013.md  ttr-0014.md  ttr-0015.md  ttr-0016.md  ttr-0017.md  ttr-0018.md  ttr-0019.md  ttr-0020.md  ttr-0021.md
src/: auth.rs  config.rs  lib.rs  main.rs  sync.rs  ticket.rs
src/github/: client.rs  issues.rs  mod.rs  projects.rs  subissues.rs
tests/: github_client_tests.rs
