[package]
name = "ticket_to_ride"
version = "0.1.0"
edition = "2021"
description = "Sync tickets to GitHub Issues"
license = "MIT"

[[bin]]
name = "ttr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
gray_matter = "0.2"
thiserror = "2"
anyhow = "1"
atty = "0.2.14"

[dev-dependencies]
tempfile = "3.24.0"
